First commited as before_44381_rev1